change deeployer to eloyt

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -164,7 +164,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .notifyjs-corner {
-    .notifyjs-deeployer-base {
+    .notifyjs-eloyt-base {
         p {
             margin-bottom: 5px;
             .text-muted {
@@ -833,7 +833,7 @@ h1, h2, h3, h4, h5, h6 {
         background-color: #000;
         background-image: url('../images/slider/ideas-are-easy.jpg');
     }
-    .item-what-is-deeployer {
+    .item-what-is-eloyt {
         background-image: url('../images/slider/who-we-are.jpg');
     }
     .item {
