--- a/views/account/pages/activation/main.html
+++ b/views/account/pages/activation/main.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row row-bottom-padded-lg public-section" id="who-we-are">
             <div class="col-md-12 section-heading text-center">
-                <h2>Welcome to Deeployer</h2>
+                <h2>Welcome to Eloyt</h2>
                 <br>
                 <div class="row">
                     <div class="col-md-12">
