--- a/views/account/pages/activation/sharing.html
+++ b/views/account/pages/activation/sharing.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block angularSection %}
-    ng-app="deeployer"
+    ng-app="eloyt"
 {% endblock %}
 
 {% block content %}
@@ -47,7 +47,7 @@
                                     Share on Facebook
                                 </button>
                                 <a
-                                    href="https://twitter.com/intent/tweet?url=http://www.deeployer.com&text=I'm%20a%20%23deeployer%2C%20join%20and%20execute%20your%20ideas%20with%20me%2C%20today%20is%20already%20late%2C"
+                                    href="https://twitter.com/intent/tweet?url=https://www.eloyt.com&text=I'm%20a%20%23eloyt%2C%20join%20and%20execute%20your%20ideas%20with%20me%2C%20today%20is%20already%20late%2C"
 
                                     class="btn btn-block btn-social btn-twitter">
                                     <span class="fa fa-twitter"></span>
