--- a/views/root/pages/statics/support.html
+++ b/views/root/pages/statics/support.html
@@ -19,7 +19,7 @@
                     We are currently only can help you to solve your problem by the email.
                     if you have any question, feedback, or any idea about our platform, feel free to send us an email.
 
-                    <a href="mailto:support@deeployer.com">support@deeployer.com</a>
+                    <a href="mailto:support@eloyt.com">support@eloyt.com</a>
                     
                     <br>
                     <br>
