--- a/views/root/pages/statics/terms-and-conditions.html
+++ b/views/root/pages/statics/terms-and-conditions.html
@@ -36,7 +36,7 @@
                     <br>
                     Your idea should be clear and honest.
                     <br>
-                    Choice of Law. Your relationship is with Deeployer, a United States company, and you agree to be bound by the laws of California and the laws of the United States.
+                    Choice of Law. Your relationship is with Eloyt, a United States company, and you agree to be bound by the laws of California and the laws of the United States.
                     <br>
                     If you track the other users your profile will be block.
                     <br>
