--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% block title %}Deeployer{% endblock %}</title>
+    <title>{% block title %}Eloyt{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href="/assets/images/favicon.ico">
