--- a/views/root/pages/landing-page.html
+++ b/views/root/pages/landing-page.html
@@ -33,15 +33,15 @@
             </div>
         </div>
 
-        <div class="item item-what-is-deeployer">
+        <div class="item item-what-is-eloyt">
             <div class="container">
                 <div class="row">
                     <div class="col-md-7 col-md-push-1">
                         <div class="fh5co-owl-text-wrap">
                             <div class="fh5co-owl-text">
-                                <h1 class="fh5co-lead">What is Deeployer?</h1>
+                                <h1 class="fh5co-lead">What is Eloyt?</h1>
 
-                                <h3 class="fh5co-sub-lead to-animate">Deeployer is a social network for realizing the
+                                <h3 class="fh5co-sub-lead to-animate">Eloyt is a social network for realizing the
                                     ideas and create the startup out of it, find Investors and build job for other
                                     people</h3>
                             </div>
