fix the motherfucking bug which was exist since 2 month ago

--- a/views/partials/angular-module.html
+++ b/views/partials/angular-module.html
@@ -219,12 +219,13 @@
             ? new google.maps.Map($('.map-view').get(0), {
                 scrollwheel: false,
                 styles: nowIsDay() ? dayMapStyle : nightMapStyle,
-                zoom: 15,
-                maxZoom: 16,
+                zoom: 13,
+                maxZoom: 13,
                 minZoom: 13,
                 streetViewControl: false,
                 mapTypeControl: false,
-                mapTypeId: google.maps.MapTypeId.ROADMAP
+                mapTypeId: google.maps.MapTypeId.ROADMAP,
+                disableDefaultUI: true
             })
             : null;
 
