--- a/views/console/pages/console.html
+++ b/views/console/pages/console.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="/assets/css/app/console/console.css">
 
 {% include '../../partials/angular-module.html' %}
+<script src='/assets/bower/js-marker-clusterer/src/markerclusterer_compiled.js'></script>
 <script src='/assets/js/app/console/console.js'></script>
 {% endblock %}
 
