--- a/views/account/pages/activation/main.html
+++ b/views/account/pages/activation/main.html
@@ -19,12 +19,9 @@
                     <div class="col-md-12">
                         <div class="col-sm-8 col-sm-offset-2">
                             <p class="text-justify">
-                                Dear user, thanks for using our platform to grow the communities, and execute your dreams.<br>
-                                In order to go further, you need to pass <strong>Three steps</strong> which each one has <strong>5 points</strong> for you and in the future you can 
-                                use these points to activate the other features of the platform.
-                                <br> 
-                                <br> 
-                                By completing each step you will earn <strong>50 Points</strong> which is the minimum requirement for activation.
+                                Thanks for using our platform to build/grow your communities, and relize your dreams.<br>
+                                In order to go further, you need to pass <strong>Three steps</strong> in order to
+                                complete your profile and be able to have access to the platform.
                             </p>
                             <br>
                             <br>
