--- a/views/partials/console/posts.html
+++ b/views/partials/console/posts.html
@@ -5,6 +5,12 @@
     class="profile-posts ng-hide"
     ng-show="moduleLoaded"
 >
+
+    <ul class="list-group post-wrapper post-spread-section">
+        <li class="list-group-item write-post-row">
+            {% include '../profile/new-post.html' %}
+        </li>
+    </ul>
     <ul
         class="
         list-group
